--- a/todos-api/Gemfile
+++ b/todos-api/Gemfile
@@ -41,7 +41,7 @@ end
 
 group :test do
   gem "factory_bot_rails"
-  gem 'shoulda', '~> 3.5'
+  gem 'shoulda-matchers', '~> 3.1'
   gem 'faker'
   gem 'database_cleaner'
 end
